--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,9 +9,8 @@
 
   <div ng-repeat="a in animations" class="row animation" >
     
-      <div class="col-md-5 img_animation">
-          <a href="#">
-          </a>
+      <div class="col-md-5">
+          <img src="img/uploads/{{a.nom_image}}" class="img_animation">
       </div>
       <div class="col-md-7">
           <div class="col-md-6"><h3>{{a.libelle}}</h3></div>
