taf autour du code

--- a/views/addCodeBillet.ejs
+++ b/views/addCodeBillet.ejs
@@ -4,20 +4,20 @@
 </div>
 <div class="col-md-6">
 	<h2>Codes disponibles</h2>
-
-	<div ng-repeat="o in optionss" class="row option_row">
-  		<div class="col-md-6">{{o.titre}} - {{o.description}}</div> 
-      <div class="col-md-6"><a class="btn-suppr" href="#" ng-click="deleteOption($index)">Supprimer <span class="glyphicon glyphicon-trash"></span></a></div>
+	<div ng-repeat="o in codes" class="row option_row">
+  		<div class="col-md-3 ng-binding text-center" style="line-height: 30px;">{{o.code_billet}}</div> 
+  		<div class="col-md-6 ng-binding text-center" style="line-height: 30px;" ng-show="o.is_used">  <span class="glyphicon glyphicon-ok"></span></div>
+  		<div class="col-md-6 ng-binding text-center"  ng-show="!o.is_used"> <span style="line-height: 30px;" class="glyphicon glyphicon-remove"></span></div>
+        <div class="col-md-3"><a class="btn-suppr" href="#" ng-click="deleteOption($index)">Supprimer <span class="glyphicon glyphicon-trash"></span></a></div>
 	</div>
 </div>
 <div class="col-md-6">
 	<h2>Ajouter un code billet </h2>
 	
-	<form ng-submit="addCode()" style="margin-top:30px;">
+	<form ng-submit="addCodeBillet()" style="margin-top:30px;">
 
 		<div class="form-group">
 			<input type="text" class="form-control" placeholder="Numero" ng-model="code_billet" ng-required="true">
-			<input type="checkbox" ng-model="checkboxes" ng-change="addCheckBillet(o._id)" id="{{o._id}}" >
 		</div>
 		<button type="submit" class="btn btn-primary">Ajouter</button>
 		<div ng-show="error" class="alert alert-danger">
@@ -26,3 +26,5 @@
 
 	</form>
 </div>
+
+<div class="col-md-3 ng-binding text-center" style="line-height: 30px;">
