--- a/views/code.ejs
+++ b/views/code.ejs
@@ -3,7 +3,7 @@
 	  <strong>ERREUR</strong> - {{error}}
 	</div>
 
-
+  {{codes}}
 	<form ng-submit="checkCode()" style="margin-top:30px;">
     	<h3>Veuillez entrer le code (inscrit sur votre billet)</h3>
 
