--- a/views/addAnimation.ejs
+++ b/views/addAnimation.ejs
@@ -17,10 +17,9 @@
           <div class="col-md-2"><label for="description">Description</label></div>
       		<div class="col-md-10"><textarea id="description" placeholder="Description" class="form-control" ng-model="description"></textarea></div>
 
-         
-          <input type="file" name="image" class="form-control" onchange="angular.element(this).scope().setImageFile(this)" file-model = "myFile">
+          <div class="col-md-2"><label for="image">Illustration</label></div>
+          <div class="col-md-10"><input type="file" name="image" class="form-control" onchange="angular.element(this).scope().setImageFile(this)" file-model = "myFile" ng-required="true"></div>
 
-          {{image.name}}
 
           
           <div class="col-md-2"><label for="place_max">Places max</label></div>
