--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,9 +25,10 @@
           <br/><br/>
           <div class="col-md-12 ajout-options">
             <h4>Options disponibles</h4>
-            <div ng-repeat="o in a.liste_options">
+            {{a.optionss}}
+            <!-- <div ng-repeat="o in a.liste_options">
               {{o.titre}}
-            </div>
+            </div> -->
           </div>
           <br/><br/>
           <!-- ADMIN PART -->
