--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,9 @@
   <script src="lib/angular.js"></script>
   <script src="lib/angular-ui-router.js"></script>
 
+  <!-- libs -->
+  <script src='lib/checklist-model/checklist-model.js'></script>
+
 
   <!-- Angular app / controllers / routes / factories-->
   <script src="javascripts/angularApp.js"></script>
