--- a/views/mes_reservations.ejs
+++ b/views/mes_reservations.ejs
@@ -14,7 +14,7 @@
     <div class="col-md-4">Nombres de places : {{r.nbPlaceReserve}}</div>
     <div class="col-md-4"><button class="btn btn-danger" ng-click="deleteReservation($index)">Annuler</button></div>
 
-    <div class="col-md-12 options" ng-repeat="o in r.listeOptions">
+    <div class="col-md-12 options" ng-repeat="o in r.optionss">
       {{o.titre}}
     </div>
 </div>
