--- a/views/addAnimation.ejs
+++ b/views/addAnimation.ejs
@@ -39,10 +39,16 @@
 
       <h3>Ajout d'options</h3>
 
-      {{option_in_animation}}
+      
       <div class="col-md-12 ajout-options">
         <div ng-repeat="o in optionss">
-          <input type="checkbox" ng-model="checkboxes" ng-change="addCheckOption(o._id)" id="{{o._id}}" > <label for="{{o._id}}">{{o.titre}}</label>
+          <input 
+          type="checkbox" 
+          id="{{o._id}}" 
+          checklist-model="option_in_animation"
+          checklist-value="o._id"
+          ng-change="addCheckOption(o._id, checked)"
+          > <label for="{{o._id}}">{{o.titre}}</label>
         </div>
       </div>
 
