--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,15 @@
     <h1>BREST 2016</h1>
   </div>
 
+
+  <form ng-submit="sendtoserver()" method="post">
+    <input type="text" ng-model="test" >
+    <input type="submit" value="envoyer">
+  </form>
+  
   <h2>Liste des animations</h2>
+
+
 
 
   <div ng-repeat="a in animations" class="row animation" >
