--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,10 @@
 
 
-<div class="page-header">
+<!-- <div class="pre-cube">
+  <div class="cube" style="left:{{x}};top:{{y}}"></div>
+</div> -->
+
+<div class="page-header" style="position:relative;left:{{x}};top:{{y}}">
     <h1>BREST 2016</h1>
   </div>
   
