--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,7 @@
   <!-- libs -->
   <script src='lib/checklist-model/checklist-model.js'></script>
   <script src="lib/socket.io/node_modules/socket.io-client/socket.io.js"></script>
+  <script src="lib/mobile-orientation.js"></script>
 
 
   <!-- Angular app / controllers / routes / factories-->
