--- a/views/addAnimation.ejs
+++ b/views/addAnimation.ejs
@@ -5,7 +5,7 @@
 
   	<h2>Ajouter une animation </h2>
 
-  	<form ng-submit="addAnimation()" style="margin-top:30px;" enctype="multipart/form-data" method="post" action="/img_anim">
+    <form ng-submit="addAnimation()" style="margin-top:30px;" enctype="multipart/form-data" method="post" action="/img_anim">
 
 
     	<div class="form-group">
@@ -30,10 +30,10 @@
 
 
           <div class="col-md-2"><label for="heure_debut">Début</label></div>
-      		<div class="col-md-10"><input id="heure_debut" type="time" datetime="hh:mm" class="form-control" placeholder="Heure de début" ng-model="heureDebut"></input></div>
+      		<div class="col-md-10"><input id="heure_debut" type="time" datetime="hh:mm" class="form-control" placeholder="Heure de début" ng-model="heureDebut" ng-required="true"></input></div>
 
           <div class="col-md-2"><label for="heure_fin">Fin</label></div>
-      		<div class="col-md-10"><input id="heure_fin" type="time" datetime="hh:mm"class="form-control" placeholder="Heure de fin" ng-model="heureFin"></input></div>
+      		<div class="col-md-10"><input id="heure_fin" type="time" datetime="hh:mm"class="form-control" placeholder="Heure de fin" ng-model="heureFin" ng-required="true"></input></div>
 
     	</div>
 
