--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,31 +47,40 @@
   
 
   <nav class="navbar navbar-default pull-right" ng-controller="controllerNav" ng-hide="currentPath() === '/code'">
-    
-    <ul class="nav navbar-nav">
-      <li ng-show="isLoggedIn()"><a href="/#/home">Accueil</a></li>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li ng-show="isLoggedIn()"><a href="/#/home">Accueil</a></li>
 
-      
-      <li ng-show="isAdmin()">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ajouter <span class="caret"></span></a>
-          <ul class="dropdown-menu">
+        
+        <li ng-show="isAdmin()">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ajouter <span class="caret"></span></a>
+            <ul class="dropdown-menu">
 
-            <li ng-show="isAdmin()"><a href="/#/addAnimation">Ajouter une animation</a></li>
-            <li ng-show="isAdmin()"><a href="/#/addOption">Ajouter une option</a></li>
-            <li ng-show="isAdmin()"><a href="/#/addCodeBillet">Ajouter un code billet</a></li>
-          </ul>
+              <li ng-show="isAdmin()"><a href="/#/addAnimation">Ajouter une animation</a></li>
+              <li ng-show="isAdmin()"><a href="/#/addOption">Ajouter une option</a></li>
+              <li ng-show="isAdmin()"><a href="/#/addCodeBillet">Ajouter un code billet</a></li>
+            </ul>
+          </li>
         </li>
-      </li>
-      <li ng-show="isAdmin()"><a href="/#/utilisateurs">Utilisateurs</a></li>
+        <li ng-show="isAdmin()"><a href="/#/utilisateurs">Utilisateurs</a></li>
 
-      <li ng-show="isLoggedIn()"><a href="/#/mes_reservations">Mes reservations</a></li>
-      <li ng-show="isLoggedIn()"><a class="nav_username">{{ currentUser() }}</a></li>
-      <li ng-show="isLoggedIn()"><a href="" ng-click="logOut()" style="color:red">Déconnexion</a></li>
-      <!-- <li ng-hide="isLoggedIn()"><a href="/#/login">Log In</a></li>
-      <li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li> -->
+        <li ng-show="isLoggedIn()"><a href="/#/mes_reservations">Mes reservations</a></li>
+        <li ng-show="isLoggedIn()"><a class="nav_username">{{ currentUser() }}</a></li>
+        <li ng-show="isLoggedIn()"><a href="" ng-click="logOut()" style="color:red">Déconnexion</a></li>
+        <!-- <li ng-hide="isLoggedIn()"><a href="/#/login">Log In</a></li>
+        <li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li> -->
 
-    </ul>
+      </ul>
+    </div>
   </nav>
 
   
