--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,6 +35,7 @@
 
 
   <style> .glyphicon-thumbs-up { cursor:pointer } </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
