--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,7 @@
         
         <li ng-show="isAdmin()">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ajouter <span class="caret"></span></a>
+            <a href="#" ng-show="isAdmin()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ajouter <span class="caret"></span></a>
             <ul class="dropdown-menu">
 
               <li ng-show="isAdmin()"><a href="/#/addAnimation">Ajouter une animation</a></li>
